[project]
name = "smib"
description = "The SoMakeIt Bot"
requires-python = ">=3.13,<4.0.0"
authors = [
    { name = "Sam Cork", email = "sam57719@gmail.com" }
]
license = "MIT"
license-files = { type = "Apache-2.0", path = "LICENSE" }
keywords = ["slack", "bot", "python"]
readme = "README.md"

dependencies = [
    "slack-bolt>=1.20.1,<2.0.0",
    "uvicorn==0.35.0",
    "aiohttp (>=3.11.13,<4.0.0)",
    "makefun>=1.15.6,<2.0.0",
    "apscheduler (>=3.11.0,<4.0.0)",
    "poetry-core (>=2.1.3,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "humanize>=4.12.3",
    "pytz>=2025.2",
    "beanie>=2.0.0",
    "fastapi>=0.116.1",
    "pydantic-settings>=2.10.1",
]

dynamic = ["version"]

[tool.smib]
display_name = "S.M.I.B."

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "no-guess-dev"

[tool.hatch.build.targets.wheel]
packages = ["src/smib"]
