[project]
name = "smib"
description = "The SoMakeIt Bot"
requires-python = ">=3.14.2,<4.0.0"
authors = [
    { name = "Sam Cork", email = "sam57719@gmail.com" }
]
license = "MIT"
license-files = { type = "Apache-2.0", path = "LICENSE" }
keywords = ["slack", "bot", "python"]
readme = "README.md"

dependencies = [
    "slack-bolt>=1.27.0,<2.0.0",
    "uvicorn==0.40.0",
    "aiohttp (>=3.13.3,<4.0.0)",
    "makefun>=1.16.0,<2.0.0",
    "apscheduler (>=3.11.2,<4.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "humanize>=4.15.0",
    "pytz>=2025.2",
    "beanie>=2.0.1",
    "fastapi>=0.128.0",
    "pydantic-settings>=2.12.0",
    "jinja2>=3.1.6",
    "websockets>=16.0",
    "packaging>=25.0",
    "influxdb-client>=1.49.0",
]

dynamic = ["version"]

[tool.smib]
display_name = "S.M.I.B."

[build-system]
requires = [
    "hatchling (>=1.28.0,<2.0.0)",
    "hatch-vcs (>=0.5.0,<1.0.0)"
]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "no-guess-dev"
local_scheme = "node-and-timestamp"

[tool.hatch.build.targets.wheel]
packages = ["src/smib"]
